# cloud-octo-apigateway

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  auth-table.json  docker-compose.yml  localstack-entrypoint.sh  push.sh  pyproject.toml  requirements.txt  task-definition.json
.github/workflows/: apigateway-actions.yml  apigateway.yml  ci.yml
app/: dependencies.py  main.py  settings.py
app/database/: auth.py  db.py  user.py
app/models/: auth.py  user.py
app/routers/: auth.py  users.py
app/services/: auth.py  user.py
app/tests/: conftest.py  test_auth.py  test_user.py
